# serializer version: 1
# name: test_get_customer_profile_empty_when_no_mongo_doc
  dict({
    'data': dict({
      'icps': list([
      ]),
    }),
    'message': None,
    'success': True,
  })
# ---
# name: test_get_customer_profile_returns_icp_list
  dict({
    'data': dict({
      'icps': list([
        dict({
          'buyer_role': list([
            'CTO',
          ]),
          'company_size': list([
            '50-500',
          ]),
          'fit_confidence': 'high',
          'id': 'icp_00000000-0000-0000-0000-000000000001',
          'industry': list([
            'SaaS',
          ]),
          'primary_region': 'US',
          'status': 'saved',
        }),
      ]),
    }),
    'message': None,
    'success': True,
  })
# ---
# name: test_get_icp_returns_cached_suggested_icps
  dict({
    'suggestedICPs': list([
      dict({
        'buyingTriggers': list([
        ]),
        'companySize': '50-500',
        'competitors': list([
          'unknown',
        ]),
        'confidenceScore': '0.85',
        'decisionMakers': list([
          'CTO',
        ]),
        'firmographics': dict({
          'company_size': '50-500',
          'industry': 'SaaS',
          'market_size': '',
          'segment': 'Mid-market',
        }),
        'growth': '',
        'growthIndicator': '',
        'how_it_differs': list([
        ]),
        'id': 'sug_001',
        'industry': 'SaaS',
        'is_agentic': True,
        'is_new': True,
        'keyAttributes': list([
        ]),
        'key_decision_makers': list([
          'CTO',
        ]),
        'marketSize': '',
        'pain_points_and_triggers': dict({
          'critical': '',
          'others': list([
          ]),
        }),
        'regions': list([
          'global',
        ]),
        'segment': 'Mid-market',
        'title': 'SaaS CTOs',
        'topPainPoint': '',
        'whySuggested': list([
        ]),
        'why_suggested': list([
        ]),
      }),
    ]),
  })
# ---
# name: test_post_customer_profile_creates_icp
  dict({
    'data': dict({
      'icps': list([
        dict({
          'buyer_role': list([
            'CTO',
          ]),
          'company_size': list([
            '50-500',
          ]),
          'created_at': '<scrubbed>',
          'fit_confidence': 'high',
          'id': '<scrubbed>',
          'industry': list([
            'SaaS',
          ]),
          'primary_region': 'US',
          'status': 'saved',
        }),
      ]),
    }),
    'message': 'Customer profiles saved successfully',
    'success': True,
  })
# ---
# name: test_post_customer_profile_from_suggested_icp_promotes
  dict({
    'data': dict({
      'icp': dict({
        'additional_context': None,
        'buyer_role': list([
          'CTO',
        ]),
        'company_size': list([
          '50-500',
        ]),
        'created_at': '<scrubbed>',
        'fit_confidence': 'high',
        'id': '<scrubbed>',
        'industry': list([
          'SaaS',
          'Mid-market',
        ]),
        'primary_region': 'US',
        'source_payload': dict({
          'companySize': '50-500',
          'confidenceScore': 0.85,
          'decisionMakers': list([
            'CTO',
          ]),
          'id': '<scrubbed>',
          'industry': 'SaaS',
          'regions': list([
            'US',
          ]),
          'segment': 'Mid-market',
        }),
        'source_suggested_icp_id': 'sug_001',
        'source_user_id': 'test_user_123',
        'status': 'saved',
      }),
    }),
    'message': 'Suggested ICP saved to customer profile successfully',
    'success': True,
  })
# ---
# name: test_post_icp_research_buyer_map
  dict({
    'data': dict({
      '_stub': True,
      '_stub_note': 'Replace by running tests/capture_fixtures.py with real API keys.',
      'component_name': 'buyer map & roles, pain points, triggers',
      'currentData': dict({
        '_metadata': dict({
          'dataSource': 'stub',
        }),
        'blurb': 'Stub for icp_buyer_map (qwen). REGENERATE with capture_fixtures.py.',
        'buyingTriggers': list([
          dict({
            'description': 'Stub description',
            'trigger': 'Stub trigger 1',
          }),
          dict({
            'description': 'Stub description',
            'trigger': 'Stub trigger 2',
          }),
        ]),
        'buyingTriggersIdentified': 2,
        'coreBuyerPersonas': 3,
        'title': 'Buyer Map & Roles, Pain Points, Triggers',
        'topPainPoint': 'Stub pain point',
      }),
      'org_id': 'test_org_abc',
      'prompt_meta': '<scrubbed>',
      'timestamp': '<scrubbed>',
      'user_id': 'test_user_123',
    }),
    'status': 'success',
  })
# ---
# name: test_post_icp_research_competitive_overlap
  dict({
    'data': dict({
      '_stub': True,
      '_stub_note': 'Replace by running tests/capture_fixtures.py with real API keys.',
      'component_name': 'competitive overlap & buying signals',
      'currentData': dict({
        '_metadata': dict({
          'dataSource': 'stub',
        }),
        'activeBuyingSignals': 1,
        'blurb': 'Stub for icp_competitive (qwen). REGENERATE with capture_fixtures.py.',
        'buyingSignals': list([
          dict({
            'description': 'Stub signal description',
            'recency': 'stub',
            'signalType': 'Stub',
            'source': 'Stub',
          }),
        ]),
        'competitiveMap': list([
          dict({
            'competitor': 'Stub Competitor',
            'differentiators': 'Stub differentiators',
            'segment': 'Stub segment',
            'share': '0%',
            'winsLosses': 'Stub pattern',
          }),
        ]),
        'competitiveNewsAndEvents': list([
          dict({
            'date': '2026-05-22',
            'headline': 'Stub headline',
            'source': 'Stub',
          }),
        ]),
        'numberOfMainCompetitors': 3,
        'recentWinLossChange': '+0%',
        'title': 'Competitive Overlap & Buying Signals',
      }),
      'org_id': 'test_org_abc',
      'prompt_meta': '<scrubbed>',
      'timestamp': '<scrubbed>',
      'user_id': 'test_user_123',
    }),
    'status': 'success',
  })
# ---
# name: test_post_icp_research_icp_summary
  dict({
    'data': dict({
      '_stub': True,
      '_stub_note': 'Replace by running tests/capture_fixtures.py with real API keys.',
      'component_name': 'icp summary & market opportunity',
      'org_id': 'test_org_abc',
      'prompt_meta': '<scrubbed>',
      'suggestedICPs': list([
        dict({
          'firmographics': dict({
            'company_size': '200-1000',
            'industry': 'Stub',
          }),
          'id': 'icp_stub_1',
          'key_decision_makers': list([
            'VP Stub',
          ]),
          'pain_points_and_triggers': dict({
            'critical': 'Stub pain',
            'others': list([
            ]),
          }),
          'title': 'Stub ICP 1',
        }),
      ]),
      'summary': 'ICP stub for icp_summary (qwen). REGENERATE.',
      'timestamp': '<scrubbed>',
      'user_id': 'test_user_123',
    }),
    'status': 'success',
  })
# ---
# name: test_post_icp_research_regulatory
  dict({
    'data': dict({
      '_stub': True,
      '_stub_note': 'Replace by running tests/capture_fixtures.py with real API keys.',
      'component_name': 'regulatory, compliance & recommended icp',
      'currentData': dict({
        '_metadata': dict({
          'dataSource': 'stub',
        }),
        'blurb': 'Stub for icp_regulatory (qwen). REGENERATE with capture_fixtures.py.',
        'icpFitScore': '0% match',
        'icpRefinementRecommendations': list([
          dict({
            'description': 'Stub description',
            'title': 'Stub recommendation 1',
          }),
          dict({
            'description': 'Stub description',
            'title': 'Stub recommendation 2',
          }),
        ]),
        'keyComplianceFrameworks': list([
          'Stub Framework 1',
          'Stub Framework 2',
        ]),
        'recommendationConfidence': 'Low',
        'title': 'Regulatory, Compliance & Recommended ICP',
        'upcomingMandates': 'Stub mandate description',
      }),
      'org_id': 'test_org_abc',
      'prompt_meta': '<scrubbed>',
      'timestamp': '<scrubbed>',
      'user_id': 'test_user_123',
    }),
    'status': 'success',
  })
# ---
# name: test_post_icp_research_returns_cached_when_available
  dict({
    'data': dict({
      'component_name': 'icp summary & market opportunity',
      'market_opportunity': 'Cached TAM',
      'summary': 'Cached summary',
      'user_id': 'test_user_123',
    }),
    'status': 'success',
  })
# ---
